[tool.poetry]
name = "utokyolib"
version = "1.0.0"
description = ""
authors = ["7ma7X <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
tweepy = "^3.9.0"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
